# indirect-disaster-memory-weibo

./: .gitignore  LICENSE-CODE  README.md  pyproject.toml
appendices/: Appendix_A.md  Appendix_B.md  Appendix_C.md  Appendix_D.md  Appendix_E.md  README.md
data/: README.md
docs/: data_availability.md  ethics_and_privacy.md  model_name_mapping.md  reproducibility.md
legacy/: README.md  fig4_engagement_return.py
legacy/entropy_diagnostics/: README.md
outputs/models/: d1_indirect_peripheral.txt  d1_indirect_peripheral_d1_m2_conditional_threshold.txt  e1b_indirect_peripheral.txt  e2_entropy_increment.txt  h1_engagement_indirect.txt  h2_indirect_period_h2_m1_period.txt  h2_indirect_period_h2_m2_composition.txt  h2a_entropy_reactivation.txt  h2b_indirect_reactivation.txt
outputs/public/: MANIFEST.csv  README.md  summary_main_models.csv  summary_robustness_models.csv  table_d1_m1_m2_comparison.csv  table_entropy_ktau_grid.csv  (+6 more)
scripts/: 00_check_input.py  01_build_analysis_ready.py  02_build_topic_assignment.py  02_build_topic_entropy.py  03_descriptive_tables.py  03_prepare_model_data.py  04_descriptive_tables.py  04_main_models.py  05_main_models.py  05_robustness_models.py  06_build_regression_tables.py  06_robustness_models.py  07_appendix_figures.py  07_build_regression_tables.py  08_appendix_figures.py  08_fig4_engagement_return.py  09_model_spec_audit.py  common.py  prepare_model_data.py
tests/: conftest.py  test_analysis_ready.py  test_input_schema.py  test_model_controls.py  test_prepare_model_data.py  test_topic_assignment.py  test_topic_entropy.py
(+1 files in other folders)
